# ROS2_line_follower

./: .gitignore  README.md
bocchi_bot/: CMakeLists.txt  README.md  package.xml
bocchi_bot/config/: view_bot_rviz.rviz
bocchi_bot/description/: camera.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
bocchi_bot/launch/: launch_sim.launch.py  rsp.launch.py
bocchi_bot/worlds/: basic_world.world
bocchi_bot/worlds/yellow line/: model.sdf:Zone.Identifier
line_follower/: CMakeLists.txt  package.xml
line_follower/src/: camera_sub.cpp  follow_line.cpp  pid_control.cpp  pid_control_server.cpp  sub_camera_bw.cpp
line_follower_bringup/: CMakeLists.txt  package.xml
line_follower_bringup/launch/: follow_line.launch.py
line_follower_interfaces/: CMakeLists.txt  package.xml
line_follower_interfaces/msg/: Contour.msg  Histogram.msg
line_follower_interfaces/srv/: Angle.srv
